examples/test/testpolicy6629.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6629
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key27: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value9
          key18: value3
      podSelector:
        matchLabels:
          key10: value26
          key28: value26
          key17: value24
